# efective

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
orders/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py
orders/templates/orders/: base.html  order_confirm_delete.html  order_detail.html  order_form.html  order_list.html  revenue.html
static/css/: style.css
